--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,14 +18,14 @@ def getCurrentFlavor() {
 }
 
 android {
-    buildToolsVersion = "33.0.0"
-    compileSdk 31
+    buildToolsVersion = '35.0.0'
+    compileSdk 34
     defaultConfig {
         applicationId "com.github.shadowsocks.plugin.kcptun"
         minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion 31
-        versionCode 2030000
-        versionName "2.3.0"
+        targetSdk 34
+        versionCode 2040000
+        versionName '2.4.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -49,6 +49,13 @@ android {
     sourceSets.main.jniLibs.srcDirs += new File(projectDir, "src/bin")
     namespace 'com.github.shadowsocks.plugin.kcptun'
     ndkVersion '25.2.9519653'
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_17
+    }
 }
 
 task goBuild(type: Exec) {
@@ -80,9 +87,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'com.github.shadowsocks:plugin:2.0.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.7.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 }
 
 ext.abiCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, x86: 3, x86_64: 4]
