--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-apply plugin: 'com.github.ben-manes.versions'
-
 buildscript {
     ext {
-        kotlinVersion = '1.6.21'
+        kotlinVersion = '2.2.21'
         minSdkVersion = 30
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
+        classpath 'com.android.tools.build:gradle:8.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
+
+
+plugins {
+    id "com.github.ben-manes.versions" version "0.52.0"
+}
+
+
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
